Added Cargo-based machinery to start up Solr and Fedora during integration tests